TOC no longer shows any scrollbars. Change of content or TOC size will update the window scrollbar. When changing content we now scroll to the top of the page.

--- a/Documentation/Styles/MonoGame/css/sharpdoc.css
+++ b/Documentation/Styles/MonoGame/css/sharpdoc.css
@@ -105,8 +105,7 @@
     position: absolute;
 	padding-left:1em;
 	width:330px;
-    height: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .sharpdoc #pane_resizer {
